--- a/index.html
+++ b/index.html
@@ -15,6 +15,106 @@
           Uma banda de rock formada em 1992 na cidade de Santos em São Paulo.
         </p>
       </div>
+      <!-- Imagem de destaque -->
+      <div class="featured-image">
+        <figure>
+          <img src="img/cbjr1.png" alt="Banda Charlie Brown Jr." />
+          <figcaption>Integrantes de banda</figcaption>
+        </figure>
+      </div>
+      <!-- Biografia -->
+      <div class="biography-container">
+        <h2>Sobre os anos inicias da banda</h2>
+        <p>
+          Em 1987, <span class="bold">Chorão</span> se mudou para Santos,
+          litoral de São Paulo após uma infância traumática. Passou a se
+          interessar pela prática do skate, chegando a figurar nas melhores
+          posições do ranking de vários campeonatos brasileiros. Ele teve uma
+          entrada repentina no cenário musical. Um dia, em um bar local,
+          substituiu o vocalista de uma banda, quando este precisou ir ao
+          banheiro. Uma pessoa da plateia, ao vê-lo cantar, fez um convite para
+          integrar sua banda.
+        </p>
+        <p>
+          Em 1990, quando o baixista saiu, Champignon, com apenas 12 anos de
+          idade, foi apresentado a Chorão por músicos conhecidos que
+          frequentavam o mesmo estúdio do cantor, na cidade de São Vicente, para
+          fazer um teste para baixista. Os dois formaram então a banda
+          <span class="bold">What's Up.</span>
+        </p>
+        <p>
+          Em 1993, se juntaram à dupla os guitarristas Marcão Britto e Nando
+          Bassetto e o baterista Vini. Foi com essa formação que a banda gravou
+          sua primeira demo, também em 1993, contendo as músicas "Shake" e
+          "Prostitute Society".
+        </p>
+        <p>
+          Pouco tempo depois, Vini e Nando Bassetto foram substituídos por
+          Renato Pelado e Thiago Castanho, respectivamente, completando a
+          primeira formação do grupo, que ainda não tinha nome.
+        </p>
+        <p>
+          O nome <span class="bold">Charlie Brown Jr.</span> só foi escolhido
+          pouco tempo após a formação clássica da banda, quando Chorão atropelou
+          uma barraca de água de coco com o desenho do personagem Charlie Brown.
+          O "Jr." foi acrescido, nas palavras de Chorão, "pelo fato de sermos
+          filhos do rock".
+        </p>
+      </div>
+      <!-- Container de citação -->
+      <div class="quotes-container">
+        <blockquote>
+          "Tem vários jeitos de se matar uma pessoa, e a indiferença é uma
+          delas."
+        </blockquote>
+        <p>Chorão</p>
+      </div>
+      <!-- Curiosidades-->
+      <div class="curiosities-container">
+        <h2>Curiosidades da banda:</h2>
+        <ul>
+          <li>
+            O nome da banda surgiu quando Chorão atropelou uma barraca de coco
+            que tinha o desenho do personagem Charlie Brown, dos quadrinhos.
+          </li>
+          <li>Chorão foi vice-campeão paulista de skate freestyle em 1987.</li>
+          <li>
+            A banda conquistou 9 prêmios no total, sendo 5 Video Music Brasil, 2
+            Grammy Latino e 2 troféus Multishow. Inclusive ganhando como melhor
+            álbum de rock brasileiro; e melhor canção, em 2007, com “senhor do
+            tempo”.
+          </li>
+        </ul>
+      </div>
+      <!-- Segunda citação -->
+      <div class="quotes-container">
+        <blockquote>
+          Alguém te perguntou como é que foi seu dia? <br />
+          Uma palavra amiga, uma notícia boa <br />
+          Isso faz falta no dia a dia <br />
+          A gente nunca sabe quem são essas pessoas
+        </blockquote>
+        <p>Charlie Brown Jr. - Céu Azul</p>
+      </div>
+      <!-- Segunda imagem -->
+      <div class="img-bold">
+        <figure>
+          <img src="img/cbjr2.jpg" alt="Show da banda." />
+          <figcaption>Chorão em um show da banda.</figcaption>
+        </figure>
+      </div>
+      <!-- Mais informações -->
+      <div class="moreinfo-container">
+        <h2>Mais informações:</h2>
+        <p>
+          Você pode conhecer mais sobre banda
+          <a
+            href="https://pt.wikipedia.org/wiki/Charlie_Brown_Jr."
+            target="_blank"
+            >clicando aqui.</a
+          >
+        </p>
+      </div>
     </div>
   </body>
 </html>
