--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
       <!-- Imagem de destaque -->
       <div class="featured-image">
         <figure>
-          <img src="img/cbjr1.png" alt="Banda Charlie Brown Jr." />
+          <img
+            src="img/Banda-Charlie-Brown-Jr.webp"
+            alt="Banda Charlie Brown Jr."
+          />
           <figcaption>Integrantes de banda</figcaption>
         </figure>
       </div>
@@ -89,10 +92,10 @@
       <!-- Segunda citação -->
       <div class="quotes-container">
         <blockquote>
-          Alguém te perguntou como é que foi seu dia? <br />
+          "Alguém te perguntou como é que foi seu dia? <br />
           Uma palavra amiga, uma notícia boa <br />
           Isso faz falta no dia a dia <br />
-          A gente nunca sabe quem são essas pessoas
+          A gente nunca sabe quem são essas pessoas"
         </blockquote>
         <p>Charlie Brown Jr. - Céu Azul</p>
       </div>
